--- a/client/index.ejs
+++ b/client/index.ejs
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style.css" />
 
     <script src="data.js"></script>
+    <script src="services.js"></script>
     <script src="controller.js"></script>
 
   </head>
@@ -21,6 +22,7 @@
     <div class="container" ng-controller="ShopsController">
 
       <div class="list">
+        <!--<div class="entry" ng-repeat="shop in data.shops"> -->
         <div class="entry" ng-repeat="shop in shopsData"> 
           <img class="entry logo" ng-src="{{shop.logo}}">
           <ul class = "entry info">
